--- a/core/templates/core/equipamento_list.html
+++ b/core/templates/core/equipamento_list.html
@@ -19,7 +19,7 @@
     <div class="card-body">
       <div class="table-responsive">
         <table class="table table-hover">
-          <thead class="table-light">
+          <thead>
             <tr>
               <th scope="col">Nome do EPI</th>
               <th scope="col">Descrição</th>
